k8s/01-vue-template-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptomore-webui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cryptomore-webui
  template:
    metadata:
      labels:
        app: cryptomore-webui
    spec:
      containers:
        - name: cryptomore-webui
          image: uhub.service.ucloud.cn/entropypool/cryptomore-webui:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cryptomore-webui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: cryptomore-webui
