k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webui-template-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: webui-template
    k8s.kuboard.cn/workload: webui-template
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"

spec:
  rules:
    - host: vue-template.npool.top
      http: &http_ruless
        paths:
          - path: /
            backend:
              serviceName: webui-template
              servicePort: 80
    - host: vue-template.xpool.top
      http: *http_rules
    - host: www.vue-template.npool.top
      http: *http_rules
    - host: www.vue-template.xpool.top
      http: *http_rules
